--- a/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
+++ b/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
@@ -1,8 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-      <RootNamespace>Core.IO</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard1.0</TargetFramework>
+		<RootNamespace>Core.IO</RootNamespace>
+		<AssemblyName>HolisticWare.Core.IO</AssemblyName>
+
+	</PropertyGroup>
+
+	<!--
+        Reset
+    -->
+	<ItemGroup>
+		<Compile Remove=".\**\*.cs" />
+		<None Include=".\**\*.cs" />
+	</ItemGroup>
+
+	<!--
+	===============================================================================================================
+        .NET Standard 1.0 references, compilation flags and build options
+    -->
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.0'">
+		<DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD1_0</DefineConstants>
+	</PropertyGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.0'">
+		<Compile Include=".\common-shared\**\*.cs" />
+		<Compile Include=".\netstandard1.0\**\*.cs" />
+	</ItemGroup>
+	<!--
+        .NET Standard 1.0 references, compilation flags and build options
+	===============================================================================================================
+    -->
 
 </Project>
