--- a/samples/CharacterSeparatedValuesBenchmarkTest/CharacterSeparatedValuesBenchmarkTest/CharacterSeparatedValuesBenchmarkTest.csproj
+++ b/samples/CharacterSeparatedValuesBenchmarkTest/CharacterSeparatedValuesBenchmarkTest/CharacterSeparatedValuesBenchmarkTest.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\Tests.Common.Shared\Tests.Common.Shared.projitems" Label="Shared" Condition="Exists('..\Tests.Common.Shared\Tests.Common.Shared.projitems')" />
   <Import Project="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.1\build\Microsoft.CodeAnalysis.Analyzers.props" Condition="Exists('..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.1\build\Microsoft.CodeAnalysis.Analyzers.props')" />
