--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -1,4 +1,15 @@
 <Project>
+    <PropertyGroup>
+        <!--
+        https://apisof.net/
+        http://packagesearch.azurewebsites.net/
+        https://source.dot.net/
+        https://sharplab.io/
+        https://dotnetfiddle.net/
+        -->
+        <LangVersion>Latest</LangVersion>
+        <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+    </PropertyGroup>
 
     <PropertyGroup Condition="$(Configuration.Contains('Release'))">
         <DebugType>Full</DebugType>
@@ -10,10 +21,7 @@
     </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <LangVersion>Latest</LangVersion>
-    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
-    <!-- 
+    <!--
         Disable XML doc warnings:
         CS1570: XML comment has badly formed XML - 'Whitespace is not allowed at this location.'
         CS1572: XML comment has a param tag for 'Bar', but there is no parameter by that name
@@ -22,7 +30,7 @@
     <NoWarn>1570;1572;1591</NoWarn>
 
     <!--
-    The .snk has both private and public keys 
+    The .snk has both private and public keys
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)/build/MSAL.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
@@ -54,7 +62,7 @@
         https://secure.gravatar.com/avatar/b662959e712466f393541935b664d3c5
     </iconUrl>
     <PackageIconUrl>
-        https://secure.gravatar.com/avatar/b662959e712466f393541935b664d3c5        
+        https://secure.gravatar.com/avatar/b662959e712466f393541935b664d3c5
     </PackageIconUrl>
     <license>LICENSE</license>
     <licenseUrl>
@@ -65,13 +73,13 @@
     </PackageLicenseUrl>
     <VersionPrefix>0.0.1</VersionPrefix>
     <!--
-    VersionSuffix - For debugging and local nuget feed 
+    VersionSuffix - For debugging and local nuget feed
     <VersionSuffix>alpha-$([System.DateTime]::Now.ToString('yyyyMMddHHmm'))</VersionSuffix>
-    -->        
+    -->
     <PackageVersion>$(Version)</PackageVersion>
 
-    <!-- 
-    put the package output into a nuget test folder 
+    <!--
+    put the package output into a nuget test folder
     -->
     <PackageOutputPath>../../output</PackageOutputPath>
   </PropertyGroup>
@@ -83,7 +91,7 @@
     -->
   <PropertyGroup>
     <!--
-      EnableNETAnalyzers  
+      EnableNETAnalyzers
       -->
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <!--
@@ -91,61 +99,5 @@
       -->
     <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <!-- 
-      PrivateAssets="All" is on these packages to ensure they're development dependencies
-      and aren't included as transitionary dependencies to package consumers.
-      For clarity, without PrivateAssets marked here, anyone consuming Microsoft.Identity.Client
-      would also be forced to install these dependencies.  PrivateAssets avoids this problem. 
-    -->
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="3.3.2" PrivateAssets="All" />
-    <!--
-    https://github.com/dotnet/roslyn-analyzers
-    package has been deprecated in favor of 'Microsoft.CodeAnalysis.NetAnalyzers'
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2" PrivateAssets="All" />    
-    -->
-    <!--
-    https://github.com/dotnet/roslyn-analyzers
-    package has been deprecated in favor of 'Microsoft.CodeAnalysis.NetAnalyzers'
-    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="3.3.2" PrivateAssets="All" />
-    -->
-    <!--
-    https://github.com/dotnet/roslyn-analyzers
-    package has been deprecated in favor of 'Microsoft.CodeAnalysis.NetAnalyzers'
-    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="3.3.2" PrivateAssets="All" />
-    -->
-    <!--
-    https://github.com/dotnet/roslyn-analyzers
-    package has been deprecated in favor of 'Microsoft.CodeAnalysis.NetAnalyzers'
-    <PackageReference Include="Microsoft.NetFramework.Analyzers" Version="3.3.2" PrivateAssets="All" />
-    -->
-
-
-    <!--
-    https://github.com/DotNetAnalyzers/StyleCopAnalyzers  
-    -->
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
-
-
-    <!--
-      https://github.com/JosefPihrt/Roslynator#nuget-analyzers
-
-      https://www.nuget.org/packages/Roslynator.DotNet.Cli
-    -->
-    <PackageReference Include="Roslynator.Analyzers" Version="3.0.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.CodeAnalysis.Analyzers" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.Formatting.Analyzers" Version="1.0.0" PrivateAssets="All" />
-
-
-    <PackageReference Include="AsyncUsageAnalyzers" Version="1.0.0-alpha003" PrivateAssets="All" />
-    <!--
-      http://www.asyncfixer.com/
-    -->
-    <PackageReference Include="AsyncFixer" Version="1.0.0" PrivateAssets="All" />
-
-  </ItemGroup>
-
 
 </Project>
