--- a/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
+++ b/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
@@ -14,6 +14,12 @@
 	<PropertyGroup>
 		<AssemblyName>HolisticWare.Core.IO</AssemblyName>
 		<RootNamespace>Core.IO</RootNamespace>
+		<VersionPrefix>0.0.3</VersionPrefix>
+		<!--
+		VersionSuffix - For debugging and local nuget feed
+		<VersionSuffix>alpha-$([System.DateTime]::Now.ToString('yyyyMMddHHmm'))</VersionSuffix>
+		-->
+		<PackageVersion>$(Version)</PackageVersion>
 	</PropertyGroup>
 
 	<!--
@@ -110,6 +116,8 @@
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
 		<Compile Include=".\common-shared\**\*.cs" />
 		<Compile Include=".\netstandard1.0\**\*.cs" />
+		<Compile Include=".\netstandard1.3\**\*.cs" />
+		<Compile Include=".\netstandard1.5\**\*.cs" />
 		<Compile Include=".\netstandard2.0\**\*.cs" />
 	</ItemGroup>
 	<!--
