--- a/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
+++ b/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
@@ -8,7 +8,7 @@
         https://sharplab.io/
         https://dotnetfiddle.net/
         -->
-		<TargetFrameworks>netstandard1.0;netstandard1.3;netstandard1.5;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -21,108 +21,5 @@
 		-->
 		<PackageVersion>$(Version)</PackageVersion>
 	</PropertyGroup>
-
-	<!--
-        Reset
-    -->
-	<ItemGroup>
-		<Compile Remove=".\**\*.cs" />
-		<None Include=".\**\*.cs" />
-	</ItemGroup>
-
-	<!--
-	===============================================================================================================
-        .NET Standard 1.0 references, compilation flags and build options
-    -->
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.0'">
-		<DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD1_0</DefineConstants>
-	</PropertyGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.0'">
-	</ItemGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.0'">
-		<Compile Include=".\common-shared\**\*.cs" />
-		<Compile Include=".\netstandard1.0\**\*.cs" />
-	</ItemGroup>
-	<!--
-        .NET Standard 1.0 references, compilation flags and build options
-	===============================================================================================================
-    -->
-
-	<!--
-	===============================================================================================================
-        .NET Standard 1.3 references, compilation flags and build options
-    -->
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.3'">
-		<DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD1_3</DefineConstants>
-	</PropertyGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3'">
-      <!--
-	  <PackageReference Include="System.IO.FileSystem" />
-	  <PackageReference Include="System.AppContext" />
-	  <PackageReference Include="System.Runtime.Extensions" />
-      -->
-	</ItemGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3'">
-		<Compile Include=".\common-shared\**\*.cs" />
-		<Compile Include=".\netstandard1.0\**\*.cs" />
-		<Compile Include=".\netstandard1.3\**\*.cs" />
-	</ItemGroup>
-
-    <!--
-        .NET Standard 1.3 references, compilation flags and build options
-	===============================================================================================================
-    -->
-
-	<!--
-	===============================================================================================================
-        .NET Standard 1.5 references, compilation flags and build options
-    -->
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.5'">
-		<DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD1_5</DefineConstants>
-	</PropertyGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5'">
-      <!--
-	  <PackageReference Include="System.IO.FileSystem" />
-	  <PackageReference Include="System.AppContext" />
-	  <PackageReference Include="System.Runtime.Extensions" />
-      -->
-	</ItemGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5'">
-		<Compile Include=".\common-shared\**\*.cs" />
-		<Compile Include=".\netstandard1.0\**\*.cs" />
-		<Compile Include=".\netstandard1.3\**\*.cs" />
-		<Compile Include=".\netstandard1.5\**\*.cs" />
-	</ItemGroup>
-
-    <!--
-        .NET Standard 1.5 references, compilation flags and build options
-	===============================================================================================================
-    -->
-
-    <!--
-	===============================================================================================================
-        .NET Standard 2.0 references, compilation flags and build options
-    -->
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
-		<DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-	</PropertyGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
-      <!--
-	  <PackageReference Include="System.AppContext" />
-	  <PackageReference Include="System.IO.FileSystem" />
-	  <PackageReference Include="System.Runtime.Extensions" />
-      -->
-	</ItemGroup>
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
-		<Compile Include=".\common-shared\**\*.cs" />
-		<Compile Include=".\netstandard1.0\**\*.cs" />
-		<Compile Include=".\netstandard1.3\**\*.cs" />
-		<Compile Include=".\netstandard1.5\**\*.cs" />
-		<Compile Include=".\netstandard2.0\**\*.cs" />
-	</ItemGroup>
-	<!--
-        .NET Standard 2.0 references, compilation flags and build options
-	===============================================================================================================
-    -->
 
 </Project>
