--- a/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
+++ b/source/HolisticWare.Core.IO/HolisticWare.Core.IO.csproj
@@ -22,4 +22,8 @@
 		<PackageVersion>$(Version)</PackageVersion>
 	</PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <CreatePackage>false</CreatePackage>
+    </PropertyGroup>
+
 </Project>
